After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758276 - queue2: custom http-headers event sent by souphttpsrc causes g_warning in ring-buffer mode
queue2: custom http-headers event sent by souphttpsrc causes g_warning in rin...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
1.6.1
Other Linux
: Normal normal
: 1.6.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-18 11:20 UTC by Aleksander Wabik
Modified: 2015-11-18 12:00 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Aleksander Wabik 2015-11-18 11:20:57 UTC
In gst_soup_http_src_got_headers_cb(), the headers event is created, and upon next create(), it's being pushed before buffer. The queue2 in ring-buffer mode prints g_warning then, causing crash if debugging (G_DEBUG=fatal-warnings). This should be changed to GST_WARNING or even lower.

Reproduction steps:

$ gst-launch-1.0 souphttpsrc location=http://kernel.org ! queue2 ring-buffer-max-size=1024000 ! fakesink
Setting pipeline to PAUSED ...
Pipeline is PREROLLING ...

** (gst-launch-1.0:5590): WARNING **: Unexpected event of kind custom-downstream-sticky can't be added in temp file of queue queue2-0 
Pipeline is PREROLLED ...
Setting pipeline to PLAYING ...
New clock: GstSystemClock
Got EOS from element "pipeline0".
Execution ended after 0:00:00.106387959
Setting pipeline to PAUSED ...
Setting pipeline to READY ...
Setting pipeline to NULL ...
Freeing pipeline ...
Comment 1 Tim-Philipp Müller 2015-11-18 11:49:58 UTC
commit ffecef4fa003101f9eb7f9bb2daf0effe6591fe6
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Wed Nov 18 11:46:45 2015 +0000

    queue2: don't print criticals when receiving custom events in ring buffer mode
    
    Downgrade from g_warning to GST_WARNING log message.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=758276
t